# polars-lprof

./: Justfile  README.md  pyproject.toml
example/: example_profiled_script.py  generate_profiler_output.sh  profile_output.lprof  profile_output.txt  run_plprof.sh  run_plprof_multi.sh
src/plprof/: parse.py
src/polars_lprof/: parse.py
tests/: basic_test.py  conftest.py  parse_test.py
tests/fixtures/: profile_output_a.txt  profile_output_b.txt
